<resources>
    <string name="app_name">FRENCH Café</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="api_key_google_maps_debug">AIzaSyC0ThbM2IRR64KJtycX7mm4M6lpcPi-MWM</string>
    <string name="api_key_google_maps_release">AIzaSyADEoe5ka72N4QgZZfyoFj_4_5BFqjpcXc</string>
    <string name="api_key_distance_matrix">AIzaSyANhGgdpE1BxMsD2dmivn5pza0Hal07-eo</string>
    <string name="fragment_maps_alarm_step1">Step 1 : Choose destination</string>
    <string name="fragment_maps_alarm_step2">Step 2 : Set time to destination</string>
    <string name="fragment_maps_alarm_destination">ARRIVAL TIME</string>
    <string name="fragment_maps_alarm_set_start">Set Start</string>
    <string name="fragment_maps_alarm_set_dest">Set Destination</string>
    <string name="fragment_maps_alarm_time_destination">ARRIVAL TIME</string>
    <string name="fragment_maps_alarm_start_hint">Your location</string>
    <string name="fragment_maps_alarm_destination_hint">Please set your destination</string>
    <string name="alarm_set_smart_alarm">Smart alarm</string>
    <string name="manual_alarm">Manual alarm</string>
    <string name="fragment_maps_alarm_start">START (optional)</string>
    <string name="fragment_map_btn_start">SET START LOCATION</string>
    <string name="fragment_map_btn_dest">SET DESTINATION LOCATION</string>
    <string name="fragment_manual_alarm_pick_time">PICK TIME</string>
    <string name="fragment_smart_alarm_destination_title">DESTINATION</string>
    <string name="activity_set_alarm_dialog_setting_content">Checking location setting</string>
    <string name="activity_set_alarm_dialog_title">Please wait</string>
    <string name="activity_set_alarm_dialog_set_alarm">Calculating travel time..</string>
    <string name="viewgroup_alarm_info_switch_name">show repeat day</string>
    <string name="alarm_choose_ringtone">Choose ringtone</string>
    <string name="layout_choose_alarm_sound_text_heading">ALARM SOUND</string>
    <string name="layout_repeat_day_text_heading">REPEAT</string>
    <string name="fragment_wake_tracker_preview_video">PREVIEW VIDEO</string>
</resources>
