<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTealLighter"
        android:padding="@dimen/margin_padding_16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/fragment_maps_alarm_step1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/margin_padding_16"
            android:text="@string/fragment_maps_alarm_step2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_text_size"
            android:text="@string/fragment_maps_alarm_destination"/>

        <include layout="@layout/layout_divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_maps_alarm_destination_hint"
            android:layout_gravity="center_horizontal"
            android:alpha="0.54"
            android:layout_marginTop="@dimen/margin_padding_16"
            android:textSize="16sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_padding_16"
            android:layout_marginTop="@dimen/margin_padding_16"
            style="@style/SearchPlaceButton"
            android:text="@string/fragment_maps_alarm_set_dest"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_16"
            android:textSize="@dimen/title_text_size"
            android:text="@string/fragment_maps_alarm_time_destination"
            />

        <include layout="@layout/layout_divider"/>

        <include layout="@layout/layout_time_picker"/>

    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnSetAlarm"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="@dimen/margin_padding_16"
        style="@style/SetAlarmButton"
        android:text="Set Alarm"/>



</LinearLayout>