<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants">
        <!--<include layout="@layout/layout_maps_alarm_hint"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_padding_16"
            android:paddingLeft="@dimen/margin_padding_16"
            android:paddingRight="@dimen/margin_padding_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_text_size"
                android:text="@string/fragment_maps_alarm_start"/>

            <include layout="@layout/layout_divider"/>

            <TextView
                android:id="@+id/tvSetStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_maps_alarm_start_hint"
                android:layout_gravity="center_horizontal"
                android:alpha="0.54"
                android:layout_marginTop="@dimen/margin_padding_16"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btnSetStart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_56"
                android:layout_marginTop="@dimen/margin_padding_16"
                android:theme="@style/BaseButton.Red"
                android:text="@string/fragment_maps_alarm_set_start"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="@dimen/title_text_size"
                android:text="@string/fragment_smart_alarm_destination_title"/>

            <include layout="@layout/layout_divider"/>

            <TextView
                android:id="@+id/tvSetDestination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_maps_alarm_destination_hint"
                android:layout_gravity="center_horizontal"
                android:alpha="0.54"
                android:layout_marginTop="@dimen/margin_padding_16"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btnSetDest"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_56"
                android:layout_marginTop="@dimen/margin_padding_16"
                android:theme="@style/BaseButton.Teal"
                android:text="@string/fragment_maps_alarm_set_dest"/>

            <TextView
                android:id="@+id/tvDestTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16"
                android:textSize="@dimen/title_text_size"
                android:text="@string/fragment_maps_alarm_time_destination"
                />

            <include layout="@layout/layout_divider"/>

            <include layout="@layout/layout_time_picker"/>

            <include layout="@layout/layout_repeat_day" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnSetAlarm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_64"
            android:layout_margin="@dimen/margin_padding_16"
            android:theme="@style/BaseButton.Pink"
            android:text="Set Alarm"/>

    </LinearLayout>

</ScrollView>

